--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-	boder:0; padding: 0; margin: 0;
+	border:0; padding: 0; margin: 0;
 }
 
 div {
@@ -138,4 +138,88 @@ div#hplogo {
 	background-position: 50%;
 	background-repeat: no-repeat;
 	background-size: contain;
+}
+
+form#searchForm {
+	height: 129px; width: 100%;
+	text-align: center;
+}
+
+div#fauxSearch {
+	display: inline-block;
+	width: 50%; height: 40px;
+	max-width: 586px;
+	border: 1px solid #d9d9d9;
+}
+
+div#fauxSearch:hover {
+	border: 1px solid #b2b2b2;
+}
+
+div#voice {
+	position: absolute;
+	top: 7px;
+	left: 93%;
+	padding: 12px;
+	background-image: url(../images/voice.png);
+	background-size: contain;
+	background-repeat: no-repeat;
+}
+
+input#search {
+	width: 100%; height: 38px;
+	border: none;
+	font-size: 18px;
+}
+
+div#buttons {
+	margin-top: 30px;
+	display: block;
+	line-height: 36px;
+	font-weight: bold;
+}
+
+div#searchButton {
+	display: inline-block;
+	margin: 0px 2px;
+	text-align: center;
+	height: 36px; width: 124px;
+	background-color: #f2f2f2;
+	border: 1px solid #f2f2f2;
+	border-radius: 2px;
+}
+
+div#luckyButton {
+	margin: 0px 2px;
+	text-align: center;
+	height: 36px; width: 144px;
+	background-color: #f2f2f2;
+	border: 1px solid #f2f2f2;
+	border-radius: 2px;
+}
+
+div#searchButton:hover {
+	border-color: #c6c6c6;
+}
+
+div#luckyButton:hover {
+	border-color: #c6c6c6;
+}
+
+div#searchButton:hover a {
+	color: black;
+}
+
+div#luckyButton:hover a {
+	color: black;
+}
+
+a {
+	text-decoration: none;
+	color: #7d7d7d;
+	cursor: default;
+}
+
+a:hover {
+	cursor: default;
 }
